--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
           integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <style>
         .box {
-            width: 100px;
-            height: 100px;
+            width: 500px;
+            height: auto;
             background-color: gray;
         }
 
         .red {
             background-color: red;
         }
-        .green{
+
+        .green {
             background-color: green;
         }
+
         .blue {
             background-color: blue;
         }
@@ -28,47 +30,35 @@
 </head>
 <body>
 <div>
-    <div id="box" class="box"></div>
-    <div id="btnR" class="btn btn-primary">R</div>
-    <div id="btnG" class="btn btn-primary">G</div>
-    <div id="btnB" class="btn btn-primary">B</div>
+    <div class="box">
+        <img id="img1"
+             src="https://images.unsplash.com/photo-1535241556859-780cb9f395f2?q=80&w=1450&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+             width="100%" alt="rabbitA">
+    </div>
+    <div id="btn" class="btn btn-primary">抽圖片</div>
 </div>
 
 
 <script type="text/javascript">
-    let box = document.getElementById('box');
-    let btnR = document.getElementById('btnR');
-    let btnG = document.getElementById('btnG');
-    let btnB = document.getElementById('btnB');
+    //把圖片存在陣列中
+    let urls = [];
+    urls.push("https://images.unsplash.com/photo-1480554840075-72cbdabbf689?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    urls.push("https://images.unsplash.com/photo-1481500576737-9238440343a6?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    urls.push("https://images.unsplash.com/photo-1452857297128-d9c29adba80b?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    urls.push("https://images.unsplash.com/photo-1535241749838-299277b6305f?q=80&w=1492&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 
-    btnR.addEventListener('click', onD1Click);
-    btnG.addEventListener('click', onD2Click);
-    btnB.addEventListener('click', onD3Click);
+    //bining event
+    let img1 = document.getElementById('img1');
+    let btn = document.getElementById('btn');
+
+    btn.addEventListener('click', onD1Click);
 
     //處理D1事件
-    function onD1Click(){
-        // box.classList.remove('red');
-        // box.classList.remove('green');
-        // box.classList.remove('blue');
-        clearBox();
-        box.classList.add('red');
-    }
-    //處理D2事件
-    function onD2Click(){
-        clearBox();
-        box.classList.add('green');
-    }
-    //處理D3事件
-    function onD3Click(){
-        clearBox();
-        box.classList.add('blue');
-    }
+    function onD1Click() {
+        let index = Math.random() * urls.length; //產生亂數
+        index = Math.floor(index);
+        img1.src=urls[index];
 
-    //reuse
-    function clearBox(){
-        box.classList.remove('red');
-        box.classList.remove('green');
-        box.classList.remove('blue');
     }
 
 </script>
