置中（未完成）

--- a/index.html
+++ b/index.html
@@ -11,18 +11,8 @@
             width: 500px;
             height: auto;
             background-color: gray;
-        }
-
-        .red {
-            background-color: red;
-        }
-
-        .green {
-            background-color: green;
-        }
-
-        .blue {
-            background-color: blue;
+            margin-right: auto;
+            margin-left: auto;
         }
 
 
